--- a/src/Components/LoginModal/LoginModal.module.css
+++ b/src/Components/LoginModal/LoginModal.module.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1000;
 }
 
 .modalContent {
@@ -50,3 +51,16 @@ input {
   transform: scale(0.95);
   transition: opacity 500ms ease-in-out, transform 500ms ease-in-out;
 }
+.greenButton {
+  background-color: #4caf50;
+  border-color: #4caf50;
+  color: white;
+}
+
+.greenButton:hover,
+.greenButton:focus {
+  background-color: #45a049;
+  border-color: #45a049;
+  color: white;
+}
+
