--- a/src/styles.css
+++ b/src/styles.css
@@ -1,51 +1,95 @@
 body {
   margin: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #f5f5f5;
+  background-color: #f5f5dc;
+  background-image: url("images/background-image.png");
+  transition: background-color 0.3s ease;
 }
+
 
 .App {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   text-align: center;
-  background-color: #fff;
+  background-color: #dcc97a;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin: 20px auto;
   max-width: 900px;
   border-radius: 8px;
   padding: 20px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  margin-top: 70px;
+}
+
+
+.App.dark-theme {
+  background-color: #333;
+  color: white;
+}
+
+body.dark-theme {
+  background-color: #121212;
+  background-image: url("images/background-image-dark.png");
+}
+
+div.dark-theme {
+  background-color: #333;
 }
 
 .header {
   background-color: #4CAF50;
-  border: 1px solid  #2f6c31ad;
+  border: 1px solid #2f6c31ad;
   color: white;
-  padding: 20px;
+  font-size: 24px;
+  border-radius: 8px 8px 0 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px 0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.header .content {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+
+.footer {
+  background-color: #4CAF50;
+  border: 1px solid #2f6c31ad;
+  color: white;
+  padding: 5px;
   font-size: 24px;
   border-radius: 8px 8px 0 0;
 }
 
 .footer {
-  background-color: #4CAF50;
-  border: 1px solid  #2f6c31ad;
-  color: #ffffff;
-  padding: 10px;
   border-radius: 0 0 8px 8px;
 }
 
 button {
   padding: 10px 20px;
   margin: 10px;
-  background-color: #00000088;
+  background-color: #4caf50;
+  border-color: #4caf50;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 button:hover {
-  background-color: #000000;
+  background-color: #2f6c31;
 }
 
 .modal {
@@ -61,12 +105,11 @@ button:hover {
 }
 
 .modal-content {
-  color: black;
+  background-color: white;
   padding: 20px;
   border-radius: 5px;
   text-align: center;
 }
-
 
 ul {
   list-style-type: none;
@@ -77,6 +120,73 @@ li {
   margin: 10px 0;
   padding: 10px;
   background-color: #4caf4fad;
-  border: 1px solid  #2f6c31ad;
+  border: 1px solid #2f6c31ad;
   border-radius: 5px;
+}
+
+.ant-btn-primary {
+  background-color: #4CAF50;
+  border-color: #4CAF50;
+
+}
+
+.ant-btn-primary:hover,
+.ant-btn-primary:focus {
+  background-color: #45a049 !important;
+  border-color: #45a049;
+}
+
+.admin-page-container {
+  padding: 20px;
+  color: #333;
+}
+
+.dark-theme .admin-page-container {
+  color: #fff;
+}
+
+.admin-page-container h1 {
+  color: inherit;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.ant-card {
+  background-color: #fff;
+  transition: background-color 0.3s ease;
+}
+
+.dark-theme .ant-card {
+  background-color: #444;
+  color: #fff;
+}
+
+.ant-card-bordered {
+  border-color: #e0e0e0;
+}
+
+.dark-theme .ant-card-bordered {
+  border-color: #555;
+}
+
+.cart-modal .ant-modal .ant-modal-title {
+  background-color: #4CAF50;
+  color: #fff;
+}
+
+.cart-modal.dark-theme {
+  background-color: #333;
+  color: #fff;
+}
+
+.cart-modal.dark-theme .ant-modal-content {
+  background-color: #333;
+  color: #fff;
+}
+
+.cart-modal.dark-theme .ant-input-number,
+.cart-modal.dark-theme .ant-btn {
+  background-color: #444;
+  color: #fff;
+  border: none;
 }
